Deployment-mainfests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: node-app
